--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <!-- 遮罩 -->
-    <!-- <div class="task_box"></div> -->
+    <!-- 导航条 -->
+    <div class="st_navbar"></div>
 
     <script src="./js/jquery-1.10.1.min.js"></script>
     <script src="./js/moveBox.js"></script>
