--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             // 导航条
             st_navbar({
                 logo: './images/logo.png',
-                company_name: '不愁吃',
+                company_name: 'company_name',
                 navbar_menu: ["首页", "第二页", "第三页"]
             });
         })
