--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
     <link href="./css/st-ui.css" rel="stylesheet" />
 
     <title>st-ui</title>
+
+    <style>
+        .st_left_navbar {
+            width: 100%;
+            height: 92vh;
+            background: gainsboro;
+            padding-top: 30px;
+        }
+
+        .st_left_navbar li {
+            width: 100%;
+            padding: 10px 20px;
+            color: #999999;
+        }
+
+        .st_second_nav_box li {
+            padding: 10px 25px;
+            font-size: 15px;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,10 +44,33 @@
         <ul>&nbsp;</ul>
     </div>
 
-    <!-- test -->
-    <!-- <div style="width:100%; height:120vh; background:red;">
-        测试
-    </div> -->
+    <!-- 用户自定义部分 -->
+    <div style="width:15%; height:120vh; position:fixed; top:8vh;">
+
+        <!-- 侧边栏 -->
+        <!-- st_open_second: 包含二级菜单，点击只能展开 -->
+        <!-- st_get_into：不包含二级菜单，点击进入详情 -->
+
+        <div class="st_left_navbar">
+            <ul>
+                <li class="st_first_nav st_open_second">第一个</li>
+                <ul class="st_second_nav_box">
+                    <li class="st_second_nav st_get_into">二级一</li>
+                    <li class="st_second_nav st_get_into">二级二</li>
+                    <li class="st_second_nav st_get_into">二级三</li>
+                </ul>
+
+                <li class="st_first_nav st_open_second">第二个</li>
+                <ul class="st_second_nav_box">
+                    <li class="st_second_nav st_get_into">二级一</li>
+                    <li class="st_second_nav st_get_into">二级二</li>
+                </ul>
+
+                <li class="st_first_nav st_get_into">第三个</li>
+            </ul>
+        </div>
+
+    </div>
 
     <script src="./js/jquery-1.10.1.min.js"></script>
     <script src="./js/moveBox.js"></script>
@@ -40,6 +83,19 @@
                 company_name: 'company_name',
                 navbar_menu: ["首页", "第二页", "第三页"]
             });
+        })
+
+        $(function () {
+            var item = $('.st_left_navbar li')
+            for (var i = 0; i < item.length; i++) {
+                item[i].index = i;
+                item[i].onmouseover = function () {
+                    item[this.index].style.background = 'white';
+                }
+                item[i].onmouseout = function () {
+                    item[this.index].style.background = 'gainsboro';
+                }
+            }
         })
     </script>
 </body>
