--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             });
         })
 
+        // 侧边栏
         $(function () {
             var item = $('.st_left_navbar li')
             for (var i = 0; i < item.length; i++) {
