--- a/index.html
+++ b/index.html
@@ -16,16 +16,6 @@
     <title>st-ui</title>
 
     <style>
-        .st_right_frame {
-            width: 100%;
-            height: 100%;
-            background: red;
-            display: none;
-        }
-
-        .st_right_frame:first-child {
-            display: block;
-        }
     </style>
 </head>
 
@@ -41,43 +31,14 @@
     <div style="width:15%; height:120vh; position:fixed; top:8vh; left:0;">
 
         <!-- 侧边栏 -->
-        <!-- st_open_second: 包含二级菜单，点击只能展开 -->
-        <!-- st_get_into：不包含二级菜单，点击进入详情 -->
 
         <div class="st_left_navbar">
             <ul>
+
+                <!-- 有下级菜单的情况 -->
                 <li class="st_first_nav st_open_second clearFloat">
                     <span class="st_first_nav_title">
-                        第一个
-                    </span>
-                    <span class="st_first_nav_arrow">
-                        <img class="first_menu_arrow_right" src="./images/first_menu_arrow_right.png" style="display:none;" />
-                        <img class="first_menu_arrow_bottom" src="./images/first_menu_arrow_bottom.png" style="display:block;" />
-                    </span>
-                </li>
-                <ul class="st_second_nav_box" style="display:block;">
-                    <li class="st_second_nav st_get_into">二级一</li>
-                    <li class="st_second_nav st_get_into">二级二</li>
-                    <li class="st_second_nav st_get_into">二级三</li>
-                </ul>
-
-                <!-- 没有下级菜单的情况 -->
-                <li class="st_first_nav st_open_second st_get_into clearFloat">
-                    <span class="st_first_nav_title">
-                        第二个
-                    </span>
-                    <span class="st_first_nav_arrow">
-                        <!-- img 改为 div 占位 -->
-                        <div class="first_menu_arrow_right"></div>
-                        <div class="first_menu_arrow_bottom"></div>
-                    </span>
-                </li>
-                <!-- 空 ul 占位 -->
-                <ul class="st_second_nav_box"></ul>
-
-                <li class="st_first_nav st_open_second clearFloat">
-                    <span class="st_first_nav_title">
-                        第三个
+                        我是可以展开的
                     </span>
                     <span class="st_first_nav_arrow">
                         <img class="first_menu_arrow_right" src="./images/first_menu_arrow_right.png" />
@@ -89,19 +50,16 @@
                     <li class="st_second_nav st_get_into">二级二</li>
                 </ul>
 
-
                 <!-- 没有下级菜单的情况 -->
                 <li class="st_first_nav st_open_second st_get_into clearFloat">
                     <span class="st_first_nav_title">
-                        第四个
+                        我不可以展开
                     </span>
                     <span class="st_first_nav_arrow">
-                        <!-- img 改为 div 占位 -->
                         <div class="first_menu_arrow_right"></div>
                         <div class="first_menu_arrow_bottom"></div>
                     </span>
                 </li>
-                <!-- 空 ul 占位 -->
                 <ul class="st_second_nav_box"></ul>
 
             </ul>
@@ -109,27 +67,16 @@
 
     </div>
 
+    <!-- 右侧frame -->
     <div style="width:85%; float:right;">
         <div class="st_right_frame">
-            二级一
+            可以展开 > 二级一
         </div>
         <div class="st_right_frame">
-            二级二
+            可以展开 > 二级二
         </div>
         <div class="st_right_frame">
-            二级三
-        </div>
-        <div class="st_right_frame">
-            第二个
-        </div>
-        <div class="st_right_frame">
-            二级一
-        </div>
-        <div class="st_right_frame">
-            二级二
-        </div>
-        <div class="st_right_frame">
-            第四个
+            我不可以展开
         </div>
     </div>
 
